# ChangeLog for sys-apps/b2-init-scripts
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jan 2015; sakaki <sakaki@deciban.com> -files/poweroff-b2-1.0.0,
  +files/bootled-initd-1.0.1, +files/copynetsetup-initd-1.0.1,
  +files/poweroff-b2-1.0.1:
  Add files entries for version bump (1.0.1)

*b2-init-scripts-1.0.1 (20 Jan 2015)

  20 Jan 2015; sakaki <sakaki@deciban.com> +b2-init-scripts-1.0.1.ebuild,
  +files/poweroff-b2-1.0.0:
  Add poweroff-b2 sbin script
