@@ -2,6 +2,13 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*b2-init-scripts-1.0.2 (23 Jan 2015)
+
+  23 Jan 2015; sakaki <sakaki@deciban.com> +b2-init-scripts-1.0.2.ebuild,
+  +files/bootled-initd-1.0.2, +files/copynetsetup-initd-1.0.2,
+  +files/poweroff-b2-1.0.2:
+  Cleanup non-Linux line endings in copynetsetup
+
   21 Jan 2015; sakaki <sakaki@deciban.com> -files/poweroff-b2-1.0.0,
   +files/bootled-initd-1.0.1, +files/copynetsetup-initd-1.0.1,
   +files/poweroff-b2-1.0.1:
